# Synth3D

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Components.cpp  Components.hpp  ECS.hpp  Events.hpp  Geometry.cpp  Geometry.hpp  Mesh.hpp  Runtime.cpp  Runtime.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp  ecs.hpp
src/Math/: CMakeLists.txt  Intersections.cpp  Intersections.hpp  glm.hpp
src/Renderer/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
